#79 Plugin refactor. Designer will now start and show two loaded plugins. Back port of loading infrastructure is now done. Left to do: 1. complete unit testing of parameters, variables etc. - IN PROGRESS 3. generator dialog - IN PROGRESS 4. code generator modifications to match C# version - IN PROGRESS 5. ability to update plugins from within application